# quicks-qas

./: CMakeLists.txt  README.md
examples/: demo.s
src/app/: README.md  main.c
src/arena/: README.md  arena.c  arena.h
src/asm/: README.md  asm.c  asm.h
src/asm/internal/: directive.c  directive.h  fixups.c  fixups.h  section.c  section.h  strdec.c  strdec.h  symtab.c  symtab.h  unit.c  unit.h
src/ast/: README.md  ast.c  ast.h
src/buf/: README.md  buf.c  buf.h
src/diag/: README.md  diag.c  diag.h
src/elf/: README.md  elf.c  elf.h
src/elf/internal/: model.h  serialize.c  serialize.h
src/encoder/: README.md  encoder.c  encoder.h
src/encoder/internal/: insn_table.c  insn_table.h
src/lexer/: README.md  lexer.c  lexer.h
src/parser/: README.md  parser.c  parser.h
src/reg/: README.md  reg.c  reg.h
src/source/: README.md  source.c  source.h
src/status/: README.md  status.c  status.h
src/token/: README.md  token.c  token.h
tests/: CMakeLists.txt  qtest.h  test_arena.c  test_asm.c  test_buf.c  test_elf.c  test_encoder.c  test_lexer.c  test_parser.c  test_reg.c  test_source.c  test_status.c  test_token.c
